--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.11.2",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/pg": "^8.10.2",
+    "@types/pg-format": "^1.0.2",
     "@types/supertest": "^2.0.12",
     "cross-env": "^7.0.3",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   }
 }
