--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.11.2",
-    "pg-format": "^1.0.4"
+    "pg-format": "^1.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
